--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cluster": "node src/cluster/cluster.js"
+    "cluster": "node src/cluster/cluster.js",
+    "server": "node src/server/index.js"
   },
   "author": "",
   "license": "ISC",
